--- a/index.html
+++ b/index.html
@@ -13,3 +13,29 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>My 1st website</title>
+    </head>
+<body>
+<h1>Hi my name is Lakshya</h1>
+<h2>This is my Portfolio:</h2>
+
+<hr />
+
+<h3>
+<a href="./birthday-invite.html">Birthday-Invite Project</a>
+</h3>
+<img src="./assets/images/birthday.jpg" height="300">
+<h3><a href="./movie-ranking.html">Movie Ranking Project</a></h3>
+<img src="./assets/images/movie.jpg" height="200">
+<hr />
+<h4>
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a>
+</h4>
+</body>
+</html>
