--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <hr />
 
 <h3>
-<a href="./birthday-invite.html">Birthday-Invite Project</a>
+<a href="./public/birthday-invite.html">Birthday-Invite Project</a>
 </h3>
 <img src="./assets/images/birthday.jpg" height="300">
-<h3><a href="./movie-ranking.html">Movie Ranking Project</a></h3>
+<h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
 <img src="./assets/images/movie.jpg" height="200">
 <hr />
 <h4>
